# shop-n-server

./: .gitignore  Makefile  README.md  docker-compose.yml  grafana-dashboard.json  run-lab-minikube.sh  run-local-e2e.sh  send_orders.py  shop-n-server.sh
.github/workflows/: cd.yml  ci.yml  main.yml  test.yml
api/: Dockerfile  Makefile  pyproject.toml
api/app/: config.py  main.py  metrics.py  orders.py
api/tests/integration/: test_integration_localstack.py
api/tests/unit/: test_config.py  test_orders.py
charts/api/: Chart.yaml  values.yaml
charts/api/templates/: _helpers.tpl  deployment.yaml  prometheus-additional-scrape-config.yaml  service.yaml
charts/chartmuseum/: Chart.yaml
charts/chartmuseum/templates/: deployment.yaml
charts/grafana/: Chart.yaml
charts/grafana/templates/: clusterrole.yaml  clusterrolebinding.yaml  configmap-dashboards.yaml  configmap-provisioning.yaml  deployment.yaml  service.yaml
infra/terraform/: backend-s3.tf  localstack.tfvars  main.tf  provider.tf  variables.tf
infra/terraform/modules/ec2/: main.tf  variables.tf
infra/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
localstack/: docker-compose.yml
monitoring/grafana/: grafana-values.yaml  my-dashboard-configmap.yaml
monitoring/grafana/dashboards/: orders-dashboard.json
monitoring/prometheus/: prometheus-values.yaml
worker/: Dockerfile  handler.py  local_invoke.sh
worker/tests/: test_handler.py  test_integration_localstack.py
worker/worker/: boto_helpers.py
(+4 files in other folders)
