[tool.poetry]
name = "shopnserve-api"
version = "0.1.0"
description = "Shop-n-Serve Flask API"
authors = ["You <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2"
boto3 = "^1.26"
prometheus-client = "^0.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
moto = "^3.0"
flake8 = "^6.0"
black = "^23.3"
bandit = "^1.7"
